--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #181a1b;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
